[gd_scene load_steps=9 format=3 uid="uid://ckmtkra7k3ey2"]

[ext_resource type="Script" uid="uid://dmye4xmtyllj8" path="res://scripts/menus/stats_panel/equipment_icons_panel.gd" id="1_qkxec"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="1_weq2e"]
[ext_resource type="Texture2D" uid="uid://id2gjt271bko" path="res://graphics/ui/ui_target_unselected.png" id="2_sscxu"]
[ext_resource type="StyleBox" uid="uid://cqjpxgwhrhqj2" path="res://themes/nested_ui/inner_panel.tres" id="2_ux6l8"]
[ext_resource type="PackedScene" uid="uid://dhtlgjfm14evh" path="res://prefabs/ui/texture_sfx_button.tscn" id="3_glfcv"]
[ext_resource type="Texture2D" uid="uid://biscd4ubrdmwc" path="res://graphics/ui/question_mark.png" id="4_dt2r4"]
[ext_resource type="Texture2D" uid="uid://l1mon0vxhkb5" path="res://graphics/ui/sprite_button_focused.png" id="5_iww1a"]
[ext_resource type="PackedScene" uid="uid://bw758t8yxr7j1" path="res://prefabs/ui/inventory/item_details_panel.tscn" id="6_dt2r4"]

[node name="EquipmentIconsPanel" type="Panel"]
custom_minimum_size = Vector2(560, 96)
theme = ExtResource("1_weq2e")
theme_override_styles/panel = ExtResource("2_ux6l8")
script = ExtResource("1_qkxec")
notEquippedSprite = ExtResource("2_sscxu")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2
alignment = 1

[node name="WeaponControl" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="WeaponLabel" type="RichTextLabel" parent="HBoxContainer/WeaponControl"]
layout_mode = 0
offset_left = 2.0
offset_top = 7.0
offset_right = 74.0
offset_bottom = 26.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 14
text = "Weapon:"
fit_content = true

[node name="WeaponSprite" parent="HBoxContainer/WeaponControl" instance=ExtResource("3_glfcv")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_right = -48.0
offset_bottom = 32.0
grow_horizontal = 0
focus_neighbor_right = NodePath("../../ArmorControl/ArmorSprite")
texture_normal = ExtResource("4_dt2r4")
texture_disabled = ExtResource("2_sscxu")
texture_focused = ExtResource("5_iww1a")
stretch_mode = 0

[node name="WeaponName" type="RichTextLabel" parent="HBoxContainer/WeaponControl"]
clip_contents = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -16.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/mono_font_size = 12
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
text = "Item Name Goes Here"
fit_content = true

[node name="ArmorControl" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="ArmorLabel" type="RichTextLabel" parent="HBoxContainer/ArmorControl"]
layout_mode = 0
offset_top = 7.0
offset_right = 72.0
offset_bottom = 26.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 14
text = "Armor:"
fit_content = true

[node name="ArmorSprite" parent="HBoxContainer/ArmorControl" instance=ExtResource("3_glfcv")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_right = -48.0
offset_bottom = 32.0
grow_horizontal = 0
focus_neighbor_left = NodePath("../../WeaponControl/WeaponSprite")
focus_neighbor_right = NodePath("../../AccessoryControl/AccessorySprite")
texture_normal = ExtResource("4_dt2r4")
texture_disabled = ExtResource("2_sscxu")
texture_focused = ExtResource("5_iww1a")
stretch_mode = 0

[node name="ArmorName" type="RichTextLabel" parent="HBoxContainer/ArmorControl"]
clip_contents = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/mono_font_size = 12
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
text = "Item Name Goes Here"
fit_content = true

[node name="AccessoryControl" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="AccessoryLabel" type="RichTextLabel" parent="HBoxContainer/AccessoryControl"]
layout_mode = 0
offset_top = 7.0
offset_right = 88.0
offset_bottom = 24.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 12
text = "Accessory:"
fit_content = true

[node name="AccessorySprite" parent="HBoxContainer/AccessoryControl" instance=ExtResource("3_glfcv")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_right = -48.0
offset_bottom = 32.0
grow_horizontal = 0
focus_neighbor_left = NodePath("../../ArmorControl/ArmorSprite")
texture_normal = ExtResource("4_dt2r4")
texture_disabled = ExtResource("2_sscxu")
texture_focused = ExtResource("5_iww1a")
stretch_mode = 0

[node name="AccessoryName" type="RichTextLabel" parent="HBoxContainer/AccessoryControl"]
clip_contents = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/mono_font_size = 12
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
text = "Item Name Goes Here"
fit_content = true

[node name="ItemDetailsPanel" parent="." instance=ExtResource("6_dt2r4")]
visible = false
custom_minimum_size = Vector2(1280, 960)
layout_mode = 1
offset_right = 720.0
offset_bottom = 864.0

[connection signal="pressed" from="HBoxContainer/WeaponControl/WeaponSprite" to="." method="_on_weapon_sprite_pressed"]
[connection signal="pressed" from="HBoxContainer/ArmorControl/ArmorSprite" to="." method="_on_armor_sprite_pressed"]
[connection signal="pressed" from="HBoxContainer/AccessoryControl/AccessorySprite" to="." method="_on_accessory_sprite_pressed"]
[connection signal="back_pressed" from="ItemDetailsPanel" to="." method="_on_item_details_panel_back_pressed"]
